--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "node": ">=4.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/app.js"
   },
   "dependencies": {
     "body-parser": "^1.17.1",
