--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "mongodb": "^2.2.24",
     "mongoose": "^4.8.7",
     "morgan": "^1.8.1",
     "request": "^2.81.0"
